<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndCreateAccount.CreateAccountFlow.CAPassword.CAPasswordFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBlueColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ca_password_enter_a_password"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="23sp"
            />

        <EditText
            android:id="@+id/fragment_ca_password_password_edit_text"
            android:layout_marginTop="23dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ca_password_password_hint"
            />

        <EditText
            android:id="@+id/fragment_ca_password_confirm_password_edit_text"
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ca_password_confirm_password_hint"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ca_password_password_specifics"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            />


        <Button
            android:id="@+id/fragment_ca_password_continue_button"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ca_name_continue_btn_text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ca_password_by_clicking_agreement"
            android:gravity="start"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            />
    </LinearLayout>

</FrameLayout>