<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/appBlueColor">

    <EditText
        android:id="@+id/login_email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/login_prompt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/login_prompt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_edit_text"/>

    <Button
        android:id="@+id/login_continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_login_confirm"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_edit_text" />

    <Button
        android:id="@+id/login_forgot_password_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_login_forgot_password"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_continue_button" />

</androidx.constraintlayout.widget.ConstraintLayout>