<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndCreateAccount.CreateAccountFlow.CASuccess.CASuccessFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBlueColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:src="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/ca_success_welcome_text_view_text"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/ca_success_now_lets_text_view_text"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="91dp"
            />

        <Button
            android:id="@+id/ca_success_fragment_start_setup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="258dp"
            android:text="@string/ca_success_start_setup_btn_text"
            />
    </LinearLayout>

</FrameLayout>