<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InititalSetup.ISGasOrElectric.ISGasOrElectricFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="120dp"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="150dp"
            android:src="@drawable/icons_stove"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/is_gas_or_electric_is_your_stove_tv"
            android:textAlignment="center"
            android:textSize="20sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="58dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp">
                <ImageView
                    android:id="@+id/is_gas_pic"
                    android:layout_width="138dp"
                    android:layout_height="131dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_gas_flame_grey"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/is_gas_pic"
                    app:layout_constraintStart_toStartOf="@id/is_gas_pic"
                    app:layout_constraintEnd_toEndOf="@id/is_gas_pic"
                    android:text="@string/is_gas_or_electric_gas_text"
                    android:textSize="17sp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp">
                <ImageView
                    android:id="@+id/is_elec_image_view"
                    android:layout_width="138dp"
                    android:layout_height="131dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_elec_grey"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/is_elec_image_view"
                    app:layout_constraintStart_toStartOf="@id/is_elec_image_view"
                    app:layout_constraintEnd_toEndOf="@id/is_elec_image_view"
                    android:text="@string/is_gas_or_electric_electric_text"
                    android:textSize="17sp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <Button
            android:layout_width="340dp"
            android:layout_height="44dp"
            android:layout_margin="35.5dp"
            android:text="@string/is_gas_or_electric_continue_button_text"
            android:textColor="@color/white"
            android:backgroundTint="@color/appBlueColor"
            />
    </LinearLayout>

</FrameLayout>